# dragreorder-listview-qrangemodeladapter-example

./: CMakeLists.txt  README.md
TaskApp/: CMakeLists.txt  Main.qml  main.cpp
TaskLib/: CMakeLists.txt  ListViewDropPlaceholder.qml  TaskBackend.cpp  TaskBackend.h  TaskDelegate.qml  TaskItem.cpp  TaskItem.h  TaskListView.qml
docs/: CHANGELOG.md
